--- a/VRChat/16/1052016.html
+++ b/VRChat/16/1052016.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "2kTUpnTr8rsZv2shguxA9QIdWtOxTw4/+Z99VOnNvq8="></script>
+    "PgbkG4OusGFHgJk88i+CrBWjxM1krNRjbsKQXD7CV+c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ガトリングガン","description":"ガトリングガンです。\nこちらの商品、テクスチャがないため、unityで着色してください。\n△ポリゴン 1796\n-利用規約-\n有償での再配布行為を禁止します。\n当データの自作発言を禁止します。\n-免責事項- \nこのデータを使用して発生した、あらゆる問題、損害にも当方は責任を持ちません。 ご使用は自己責任でお願いします。","url":"https://booth.pm/ja/items/1052016","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/bbdf27ef-f591-4b8b-9bd3-e80fff42e933/i/1052016/053e16a5-8385-4f8b-99df-4cfb74418106_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2kTUpnTr8rsZv2shguxA9QIdWtOxTw4/+Z99VOnNvq8="></script>
+    nonce="PgbkG4OusGFHgJk88i+CrBWjxM1krNRjbsKQXD7CV+c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -353,9 +353,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
