--- a/VRChat/87/1051887.html
+++ b/VRChat/87/1051887.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "WN5hgr+JEVrQ0DuhJY7FwsNI7g3C+TZOFnJ2TCAip48="></script>
+    "wwOsoGquO1e++XchWqculZ9d6fEPZinkvi8RjvKJB3g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ArmoredPack01　Ver1.0","description":"DDW-005-R　開発コード「Erebus」2種\nDDW-006-S  携帯試製短刀\nDDD-009　汎用装甲武装化パック　10種13項目\nを提供します","url":"https://booth.pm/ja/items/1051887","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/64446b0b-9225-4dba-a979-4708b93cc2ef/i/1051887/f4c5a126-84b5-4a4a-9b6b-38c71e63e8b9_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="WN5hgr+JEVrQ0DuhJY7FwsNI7g3C+TZOFnJ2TCAip48="></script>
+    nonce="wwOsoGquO1e++XchWqculZ9d6fEPZinkvi8RjvKJB3g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -517,9 +517,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
