--- a/VRChat/68/1051168.html
+++ b/VRChat/68/1051168.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "bTPEifkuz0pEKdlZSXWqzJGPCgnUPPh2GiSuN+Uz9wU="></script>
+    "M+Ro9IwxsH8IoRxOnR2j2gzNL9/VexCkQRh2uCely7g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　ハロウィン【仮装セット】","description":"【利用規約】\n\n\n著作権の放棄はしません\n他の人に迷惑のかからない範囲でご利用ください。\n商用、個人利用共に自由です。\n\nテクスチャ、モデルの改変は自由ですが、\n再配布は改変の有無に関わらず禁止とします。\n\nなにかありましたらTwitterまでご連絡ください。\nTwitterID @nui_ikaruga\n\n2018.10.13 ヌヰ\n\n・コウモリ羽　△494\n　頭につけることを想定したコウモリの羽\n　シェイプキーで角度とか変えられるぞ！\n　そしてダイナミックボーンで揺れる\n\n・マント　△456\n　風にはためく吸血鬼のマント\n　シェイプキーで形が多少変化できるのでいい感じにしよう！\n　ボーンの設定が難しいからマントの説明をしっかり読もう！！\n\n・骸骨の面　△714\n　角の生えた骸骨の面。可愛さの欠片もないぞ！\n\n・鎌　△244\n　魂を刈る大きな鎌。懐ががら空きだから戦闘には向かないぞ！\n　テクスチャで血ありなしを選ぼう\n\n・霊魂　△144\n　鎌で刈り取られた霊魂。ネオンシェーダーでサイバー魂にするのがおすすめだ！\n\n・杖　△432\n　大魔法が撃てそうな大きな杖。ジェムシェーダーで宝玉をキラキラさせよう！\n\n・魔女の帽子　△1032\n　シンプルな魔女の帽子。ふちについてる飾りの揺れがいい感じだ！\n\n・狼男の耳　△548\n　みんな大好きケモミミ。シェイプキーで大きさや角度が変えられる！すっごーい！\n\n・狼男の手　△362(片手)\n　暖かそうなおてて。大きな肉球でぷにぷにしてあげよう！\n\n・狼男の鼻　△140\n　嗅覚が上がりそうなお鼻。揺れるひげがキュートだ！","url":"https://booth.pm/ja/items/1051168","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/1eae7904-bf49-4bec-baa6-9c89e938aed4/i/1051168/8902b600-c89f-405a-853f-854df9caa5ee_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bTPEifkuz0pEKdlZSXWqzJGPCgnUPPh2GiSuN+Uz9wU="></script>
+    nonce="M+Ro9IwxsH8IoRxOnR2j2gzNL9/VexCkQRh2uCely7g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -394,9 +394,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
