--- a/VRChat/65/1050865.html
+++ b/VRChat/65/1050865.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "SdllQmS8FXctN/fS2huT7VBM1tqRK5fDnItSOPyodbY="></script>
+    "615xVGRAoXxRssVQ0ElMevJ3DJvHfTeudiJDvVdfNdQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け女の子型チュートリアルアバター\"VRChatChan\"","description":"VRChat向け女の子型チュートリアルアバター\"VRChatChan\"\n\n※本データは旧版になりました。\n大幅リニューアルした「プラクチカ・スピカ（キット仕様）」をご利用ください。\n\nメタセコイア４でVRC向けモデルを製作するための基本素材として製作しました。スキニング済みで、メタセコイア４EX版からFBXエクスポートするだけで、Unity上でGenericからHumanoidに問題なく認識されます。ボイスチャット向けブレンドシェイプ搭載のほか、自動アイトラッキング、自動まばたきに対応。\n\nVRCSDKのチュートリアルモデルとだいたい同じ構成のFBXになります。但しこちらは女性的な形状の素体です。\nメタセコイア向けには更に、曲面化（サブディビ）フリーズ前状態のメッシュも含めています。こちらを使うことで、比較的容易にお好みのお顔や体に改修することができます。\n\nmqo・mqxファイルと、エクスポート済FBXファイル同梱","url":"https://booth.pm/ja/items/1050865","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/6532652b-e023-4900-b8f3-4ba6c3a29217/i/1050865/a349c301-c884-4fe1-92ab-6bc412e758fd_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="SdllQmS8FXctN/fS2huT7VBM1tqRK5fDnItSOPyodbY="></script>
+    nonce="615xVGRAoXxRssVQ0ElMevJ3DJvHfTeudiJDvVdfNdQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -360,9 +360,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
