--- a/VRChat/35/1050435.html
+++ b/VRChat/35/1050435.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "pHzzhBAHUCbUhdbCDp7AoEnN+8k5XIroItzCvK47osg="></script>
+    "jzfkuJRBeAlDdY6ZA2S1d/cMgqsvSsU+iNJ4fnlQaZA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【1619Hz:|| BGM】The Apple of Dystopia","description":"\nVRChatのワールド、【1619Hz:||】のBGMとして制作した曲です。\n\nmp3とwav、ついでのれどめと、すべて同梱したzipとなっております","url":"https://booth.pm/ja/items/1050435","offers":{"priceCurrency":"JPY","@type":"Offer","price":"150"},"image":"https://booth.pximg.net/c/620x620/c446b467-12cc-4120-b72b-ec91668ac656/i/1050435/a3ef993f-7168-4b3a-8469-0aa58fdaf350_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pHzzhBAHUCbUhdbCDp7AoEnN+8k5XIroItzCvK47osg="></script>
+    nonce="jzfkuJRBeAlDdY6ZA2S1d/cMgqsvSsU+iNJ4fnlQaZA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -425,9 +425,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
