--- a/VRChat/64/1049764.html
+++ b/VRChat/64/1049764.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "l6hCi88uXEJXynphzEbgEqLIf25wqjIb4Aa7Ei/fRjM="></script>
+    "yH+JDdy+8uPzzbvjtRqFQH3GXBplhUWtz5hraGw9Er4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"無料：八稜錘(はちりょうすい)","description":"中国の八稜錘(はちりょうすい)という武器です。\n気になる方は調べてみてください。\n\n2個持って使う武器らしいので、使用する際は両手に配置するのをおすすめします。\n\nVRchatでの使用を想定した3Dモデルですが何にでも使用可能です。\n\nテクスチャはありません。\n2枚目4枚目6枚目の画像はUnityにあるマテリアルの設定でMetalicの値を上げたものです。\n\nポリゴン数：140\n\n・内容物\n\n　FBX\n\n\n・禁止事項\n　\n　改変の有無問わずデータの再配布・販売は 禁止です。\n\n\n\n","url":"https://booth.pm/ja/items/1049764","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fcf0d975-c982-4865-beba-1cd6e5c30f4a/i/1049764/38d6b1ac-7113-41d3-8d1e-76cd96c04cea_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="l6hCi88uXEJXynphzEbgEqLIf25wqjIb4Aa7Ei/fRjM="></script>
+    nonce="yH+JDdy+8uPzzbvjtRqFQH3GXBplhUWtz5hraGw9Er4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -417,9 +417,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
