--- a/VRChat/57/1047757.html
+++ b/VRChat/57/1047757.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "T3cjHG84Okyuz9dlbTXdR74TT8rzukX3PhFaftQ+EjQ="></script>
+    "9SadFfLwGJ/fl5i9r5nJaR8W3KScvM0tPvYYX6YBAYw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"（03/10更新）VRChat想定 小物セット","description":"倉庫的ななにかです、中身が増える予定です。\n「小物セット」と「ブースト用小物セット」の中身は一緒です。\n\nVRChatで使うために作った小物です、それ以外は試してないのでわからないです。\n\n使用・改変などご自由してください。\n何も手を加えていない状態での再配布はやめて下さい。\n\nなにかあったときはこちらへ https://twitter.com/PTMVRC\n中身の最新情報はTwitterに呟きます。\n\n【中身】\n10/11 魔女っぽい帽子・棒付きキャンディ・飴玉\n10/13 バケツ・三角コーン・タンバリン・ビブラスラップ\n　　　(03/10スムースに更新)\n03/10 お玉・フライパン・プッシュボトル・おばけ","url":"https://booth.pm/ja/items/1047757","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/cb04778a-a63e-447b-9e8d-0bb98445c7a2/i/1047757/44fda31f-280f-47cc-a50d-f66575476315_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="T3cjHG84Okyuz9dlbTXdR74TT8rzukX3PhFaftQ+EjQ="></script>
+    nonce="9SadFfLwGJ/fl5i9r5nJaR8W3KScvM0tPvYYX6YBAYw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -463,9 +463,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
